force-app/main/default/objects/Encounter__c/fields/Conclusions__c.field-meta.xml
<CustomField>
    <fullName>Conclusions__c</fullName>
    <label>Conclusions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>