force-app/main/default/objects/Encounter__c/fields/End_Visit__c.field-meta.xml
<CustomField>
    <fullName>End_Visit__c</fullName>
    <label>End Visit</label>
    <type>DateTime</type>
</CustomField>