force-app/main/default/objects/Encounter__c/fields/Patient_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Patient_Encounter__c</fullName>
    <label>Patient Encounter</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patient Encounters</relationshipLabel>
    <relationshipName>Encounters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>