force-app/main/default/objects/Encounter__c/fields/Start_Visit__c.field-meta.xml
<CustomField>
    <fullName>Start_Visit__c</fullName>
    <label>Start Visit</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>