force-app/main/default/objects/Encounter__c/fields/Visit_type__c.field-meta.xml
<CustomField>
    <fullName>Visit_type__c</fullName>
    <label>Visit type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatory</fullName>
            </value>
            <value>
                <fullName>Hospitalisation</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>